--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -19,6 +19,7 @@
 a{
     text-decoration: none;
     color: var(--primary-text-color);
+    
 }
 li{
     list-style: none;
@@ -47,9 +48,9 @@ h1,h2,h3{
 
 /* navbar start */
 .navbar{
-    width: 100vw;
+    width: 100%;
     background-color: var(--secondary-bg-color);
-    padding: 16px 0;
+ 
     font-family: 'Poppins', sans-serif;
     font-weight: 400 !important;
 }
@@ -67,13 +68,15 @@ h1,h2,h3{
     font-size: 20px;
 }
 
-.nav-bar-flex{
-    width: 100%;
-}
+
 .nav-item{
     margin: 0 6px;
     display: inline-block;
     position: relative;
+}
+.nav-item a{
+    padding: 1rem;
+    display: block;
 }
 .nav-item a:hover{
 color: var(--style-color);
@@ -83,10 +86,12 @@ color: var(--style-color);
 }
 
 .dropdown-menu{
-    width: 100%;
+    width: 150%;
     background-color: var(--primary-bg-color);
     z-index: 999;
     position: absolute;
+    top: 100%;
+    left: 5%;
     display: none;
 }
 .nav-item:hover ul.dropdown-menu{
@@ -347,13 +352,45 @@ admin login page ends
     width: 450px;
 }
 
+.create-one{
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+}
+.create-one-login{
+    text-align: center;
+    margin-top: 20px;
+}
+
+/* ...................user Login  and register ends............................ */
+
+/* ...........................doctor login start..................... */
+.doctor-login{
+    justify-content: center;
+}
+.doctor-login-body{
+    padding: 80px 0;
+}
+.card-body-doctor{
+    width: 450px;
+}
+
+/* ...........................doctor login ends..................... */
+
+/* .....................change Password start */
+
+.change-info{
+    justify-content: center;
+}
+.change-body{
+    width: 350px;
+}
+.change-height{
+    padding: 60px 0;
+}
 
 
-
-/* ...................user Login ends............................ */
-
-
-
+/* .....................change Password start */
 
 
 
